--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ environment-vars =
 eggs =
     Plone
     Pillow
+    plone.app.mosaic
     iaweb.mosaic [test]
 
 
@@ -101,6 +102,9 @@ interpreter = zopepy
 scripts =
    zopepy
    plone-compile-resources
+
+[sources]
+plone.app.mosaic = git https://github.com/plone/plone.app.mosaic.git
 
 [versions]
 # Don't use a released version of iaweb.mosaic
