Test part should use test extra requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,7 +47,8 @@ eggs = ${instance:eggs}
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = ${instance:eggs}
+eggs =
+    iaweb.mosaic [test]
 initialization =
     os.environ['TZ'] = 'UTC'
 defaults = ['-s', 'iaweb.mosaic', '--auto-color', '--auto-progress']
