--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,8 @@
 graft src/iaweb
 graft docs
 include *.rst
+include LICENSE.GPL
 global-exclude *.pyc
+exclude .gitlab-ci.yml
+exclude Makefile
+exclude requirements.txt
