add flake8-ignore rule (Q000 for quotes)

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,7 +36,7 @@ eggs =
 recipe = plone.recipe.codeanalysis[recommended]
 directory = ${buildout:directory}/src/iaweb
 return-status-codes = False
-
+flake8-ignore = Q000
 
 [omelette]
 recipe = collective.recipe.omelette
