change robot rules to fix travis build error

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -82,7 +82,7 @@ eggs = createcoverage
 recipe = zc.recipe.egg
 eggs =
     ${test:eggs}
-    plone.app.robotframework[debug,ride,reload]
+    plone.app.robotframework[debug]
 
 
 [releaser]
@@ -116,5 +116,5 @@ iaweb.mosaic =
 
 
 # development dependencies
-setuptools =
-zc.buildout =
+setuptools = 38.2.4
+zc.buildout = 2.13.1
