add flake8-ignore rule and define dependencies versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -38,7 +38,7 @@ eggs =
 recipe = plone.recipe.codeanalysis[recommended]
 directory = ${buildout:directory}/src/iaweb
 return-status-codes = False
-
+flake8-ignore = Q000
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -82,7 +82,7 @@ eggs = createcoverage
 recipe = zc.recipe.egg
 eggs =
     ${test:eggs}
-    plone.app.robotframework[debug,ride,reload]
+    plone.app.robotframework[debug]
 
 
 [releaser]
@@ -115,8 +115,8 @@ iaweb.mosaic =
 
 
 # development dependencies
-setuptools =
-zc.buildout =
+setuptools = 38.2.4
+zc.buildout = 2.13.1
 plone.api = >=1.8.4
 mr.developer = >=1.38
 PyYAML = 3.12
